minor changes to ensure compilation of snippets, not finished

--- a/notebook/Makefile
+++ b/notebook/Makefile
@@ -1,5 +1,15 @@
-cppfiles=$(wildcard *.cpp)
+sourcefiles=$(wildcard *.cpp) $(wildcard *.java)
+objects=$(patsubst %.cpp,%.o,$(wildcard *.cpp))
+classes=$(patsubst %.java,%.class,$(wildcard *.java))
 
-notebook.pdf: notebook.tex $(cppfiles)
+notebook.pdf: notebook.tex $(sourcefiles)
 	pdflatex -shell-escape $<
 	pdflatex -shell-escape $<
+
+ensurecompile: $(objects) $(classes)
+
+%.o: %.cpp
+	g++ -c $< -o $@
+
+%.class: %.java
+	javac $< -o $@
