--- a/environment/Makefile
+++ b/environment/Makefile
@@ -1,10 +1,4 @@
-files=$(patsubst %.cpp,%,$(wildcard *.cpp)) 
-files+=$(patsubst %.java,%.class,$(wildcard *.java))
-
-all: $(files)
-
-%: %.cpp
-	g++ -g -ggdb -lm -std=c++11 -pipe -o $@ $<
+CPPFLAGS=-g -ggdb -lm -std=c++11 -pipe
 
 %.class: %.java
 	javac -g $<
